--- a/src/app/components/cadastro/cadastro.component.html
+++ b/src/app/components/cadastro/cadastro.component.html
@@ -1,4 +1,11 @@
 <h1>Cadastro de Materiais Permanentes</h1>
+<div>
+<a routerLink="">Materiais Permanentes</a>
+</div>
+
+<div>
+<a routerLink="">Materiais Provisorios</a>
+</div>
 
 <form class="material">
 
@@ -21,6 +28,6 @@
     <label>Unidade</label>
     <input type="text">
   </div>
-
+  
   <button>Cadastro</button>
 </form>
