--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,10 @@
-<h1>Dashboard</h1>
+<section class="cont-dash">
+    <h1>DAsh</h1>
+    <div class="grafs">
+        <div class="graf-um"></div>
+        <div class="graf-dois"></div>
+        <div class="graf-tres"></div>
+    </div>
+    <div class="conteudo">
+    </div>
+</section> 
