--- a/src/app/components/sobre/sobre.component.html
+++ b/src/app/components/sobre/sobre.component.html
@@ -1,3 +1,20 @@
-<p>
-  sobre works!
-</p>
+<section class="sobre">
+  <form class="form">
+      <div>
+          <label>Nome</label>
+          <input type="text">
+        </div>
+        <div>
+          <label>Email</label>
+          <input type="text">
+        </div>
+        <div>
+          <label>Descrição</label>
+          <textarea></textarea>
+        </div>  
+  </form>
+  <div class="contato">
+    <h3>Contato</h3>
+    <h3>Localização</h3>
+  </div>
+</section>
