--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
 <div class="container">
     <app-header></app-header>
-    <div class="conteudo">
-        <app-sidebar></app-sidebar>
-        <router-outlet></router-outlet>
-        <app-article></app-article>
-    </div>
+    <section class="conteudo">
+        <div class="sid-nav">
+            <app-sidebar></app-sidebar>
+        </div>
+        <div class="article">
+            <router-outlet></router-outlet>
+        </div>  
+    </section>
     <app-footer></app-footer>
 </div>
 
